gcc/testsuite/g++.dg/modules/atom-preamble-3.C
// { dg-additional-options -fmodules-atom }

#define export export  // { dg-error "" }
export module malcolm; // { dg-error "" }

